tests/sksl/errors/OverflowUintLiteral.glsl
### Compilation failed:

error: 2: integer is out of range for type 'uint': -1
error: 4: integer is too large: 4294967296
error: 8: unknown identifier 'uintMinMinusOne'
3 errors
